tests/algorithms/x/Clojure/project_euler/problem_014/sol1.out
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_014/sol1.clj:50:893).
Can only recur from tail position

Full report at:
/tmp/clojure-1750393066687504259.edn